# kenken

./: .gitignore  Cargo.toml  kenken.json  kenken1.ron  kenken165541.ron  kenken43065.ron  kenken72232.ron  plot.py  results.csv
knkns_data/: puzzle1.ron  puzzle10.ron  puzzle11.ron  puzzle12.ron  puzzle13.ron  puzzle14.ron  puzzle15.ron  puzzle2.ron  puzzle3.ron  puzzle4.ron  puzzle5.ron  puzzle6.ron  puzzle7.ron  puzzle8.ron  puzzle9.ron
old/: kenken37445.ron  kenken43208.ron  kenken74077.ron
src/: asg.rs  draw.rs  gen.rs  kenken.rs  main.rs  parse.rs  print.rs  solve.rs  validate.rs
