[package]
name = "kenken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.7"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
termcolor = "1.1.3"

good_lp = "1.3.2"
#good_lp = { version = "1.3.2", features = ["highs"], default-features = false }